--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus_shortname:   Rance
   #ad-slot:
 #bing-verify:
 email:         vergil000@gmail.com
-github-url:         https://github.com/RanceLL
+github-url:         RanceLL
 Ingress:         LaurentRR
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
@@ -49,7 +49,7 @@ instagram:          rang_luo
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
