--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ Ingress:         LaurentRR
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          rang_luo
+#instagram:          rang_luo
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
